# jask

./: .gitignore  README.md  example.py  log.md  pyproject.toml
benchmarks/: benchmark_1gb.py  benchmark_memory.py  benchmark_vs_dask.py  experiment_chaining.py  profile_forward.py
docs/: api.rst  conf.py  extending.md  index.md
jask/: __init__.py
jask/base/: __init__.py  base_algo.py  base_ops.py  base_page.py  disk_array.py  utils.py
jask/linalg/: __init__.py  add.py  materialize.py  matmul.py  mul.py  square.py  sub.py  sum.py  transpose.py
tests/: conftest.py  test_chained.py  test_disk_array.py  test_file_lifecycle.py  test_jax_integration.py  test_memory_bounds.py  test_ops.py  test_optax.py  test_page_size.py  test_scalar_mul_traced.py
