[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jask"
version = "0.0.1"
description = "Out-of-core, differentiable array computation for JAX."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "jax",
    "numpy",
    "psutil",
]

[project.optional-dependencies]
bench = ["dask[array]"]
test = ["pytest", "pytest-memray", "optax"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]

[tool.setuptools.packages.find]
include = ["jask*"]
